@@ -13,6 +13,7 @@ import org.springframework.stereotype.Component;
 
 import java.util.Collections;
 import java.util.Map;
+import java.util.Set;
 
 @Slf4j
 @Component
@@ -38,9 +39,9 @@ public class WithingsAccessTokenResponseConverter implements Converter<Map<Strin
                 .withToken(body.getAccessToken())
                 .refreshToken(body.getRefreshToken())
                 .expiresIn(body.getExpiresIn())
-                .scopes(Collections.singleton(body.getScope()))
+                .scopes(Set.of(body.getScope()))
                 .tokenType(OAuth2AccessToken.TokenType.BEARER)
-                .additionalParameters(Collections.singletonMap("userId", body.getUserId()))
+                .additionalParameters(Map.of("userId", body.getUserId()))
                 .build();
     }
 }
